# dtwo

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/data/: settings.db
backend/src/: config.rs  error.rs  handlers.rs  main.rs  routes.rs  settings.rs  sql.rs  traits.rs
data/: settings.db
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest-setup.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/settings/[id]/edit/: $types.d.ts  proxy+page.ts
frontend/.svelte-kit/types/src/routes/settings/new/: $types.d.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  helpers.ts  types.ts
frontend/src/lib/components/: ConfirmDialog.svelte  InlineNotification.svelte  JsonEditor.svelte  SettingsCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[id]/edit/: +page.svelte  +page.ts
frontend/src/routes/new/: +page.svelte  page.svelte.test.ts
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/settings/[id]/edit/: +page.svelte  +page.ts
frontend/src/routes/settings/new/: +page.svelte
